--- a/index.html
+++ b/index.html
@@ -2,15 +2,31 @@
 
 <html>
     <head>
-        <title>Nikolai Van Baak</title>
+        <title>Student Bio</title>
 
     </head>
     <body>
-        <h1>About Me</h1>
+        <h1>Student Bio</h1>
 
+        <h2>Clark Kent</h2>
 
+        <img width=300px src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Clark_Kent_cosplayer.jpg" alt="Picture of me">
 
+        <p>I am an extremely ordinary reporter from Smallville, Kansas, where I grew up as a normal human child.  Any resemblance to Superman is entirely coincidental.  I believe very strongly in justice and have a strong dislike of glowing green rocks.</p>
+        <p>I am learning to program because I heard Lex Luthor is really good at it and I want to be able to stop him if he pulls anything nefarious with computers.</p>
+        <p>Also, justice.</p>
 
+        <h2>Contact Info</h2>
+
+        <ul>
+            <li>
+                <strong>Email: </strong><a href=mailto:ckent@dailyplanet.com>ckent@dailyplanet.com</a>
+            </li>
+            <li>
+                <strong>Github: </strong><a href="github.com/totallynotsuperman">Clark Kent</a></li>
+            <li>
+                <strong>Portfolio: </strong><a href="#">Coming soon!</a</li>
+        </ul>
 
     </body>
 </html>
