fixed the fake github link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <strong>Email: </strong><a href=mailto:ckent@dailyplanet.com>ckent@dailyplanet.com</a>
             </li>
             <li>
-                <strong>Github: </strong><a href="github.com/totallynotsuperman">Clark Kent</a></li>
+                <strong>Github: </strong><a href="https://github.com/totallynotsuperman">Clark Kent</a></li>
             <li>
                 <strong>Portfolio: </strong><a href="#">Coming soon!</a</li>
         </ul>
